Upgraded to JUnit 5 and changed pom.xml, currently all works, closes #4